--- a/Labs/css/style.css
+++ b/Labs/css/style.css
@@ -1,8 +1,6 @@
 body {
     background: url(../img/land.jpg);
     background-size: cover;
-    overflow: scroll;
-    overflow-x: hidden;
     min-height: 100%;
     padding: 16px 16px 16px 130px;
     font-family: Montserrat, sans-serif;
@@ -23,6 +21,7 @@ nav button {
     font-size: 30px;
     font-weight: 500;
     background: inherit;
+    text-decoration: none;
     border: 1px solid transparent;
     cursor: pointer;
     padding: 0.75rem 1.25rem;
@@ -63,6 +62,7 @@ section.request {
     text-align: center;
     font-size: 25px;
     font-weight: 600;
+    border: 0;
 }
 
 .play__button button {
@@ -94,12 +94,12 @@ section.request {
     flex-wrap: wrap
 }
 
-.courses__row button {
+.courses__row a {
     padding: 2px;
     border: none;
 }
 
-.courses__row button:hover {
+.courses__row a:hover {
     cursor: pointer;
     box-shadow: inset 0 0 0 23px #53ea93;
 }
