--- a/Labs/css/style.css
+++ b/Labs/css/style.css
@@ -123,6 +123,8 @@ table {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 2fr 1fr;
+    /*grid-template-rows: 1fr 2fr 1fr 2fr 1fr;*/
+    grid-auto-rows: 1fr 2fr;
 }
 
 thead,
@@ -152,7 +154,6 @@ tbody > tr > td{
 
 tr:nth-child(2n - 1) td {
     background-color: #393d94;
-    font-size: 40px;
 }
 
 #table-container {
